Adding check code
Signed-off-by: Rony Xavier <rxavier@mitre.org>

--- a/inspec.yml
+++ b/inspec.yml
@@ -6,3 +6,10 @@ summary: InSpec testing for baseline compliance with the Kubernetes STIG Node OS
 description: An InSpec profile verifying compliance with Kubernetes STIG version 1.16 Node OS Checks.
 version: 1.0.0
 inspec_version: ">= 4.0"
+
+inputs:
+  - name: kubectl_path
+    description: 'Path to kubectl on the target node'
+    type: string
+    value: '/usr/local/bin/kubectl'
+    required: true
