--- a/inspec.yml
+++ b/inspec.yml
@@ -15,7 +15,28 @@ inputs:
     required: true
 
   - name: pki_path
-    description: 'Path to Kubernetes manifest files on the target node'
+    description: 'Path to Kubernetes PKI files on the target node'
     type: string
     value: '/etc/kubernetes/pki/'
+    required: true
+
+  - name: kubeadm_path
+    description: 'Path to kubeadm file on the target node'
+    type: string
+    value: '/usr/local/bin/kubeadm'
+    required: true
+
+  - name: kubectl_path
+    description: 'Path to kubectl on the target node'
+    type: string
+    value: '/usr/local/bin/kubectl'
+    required: true
+
+  - name: kubernetes_conf_files
+    description: 'Path to Kubernetes conf files on the target node'
+    type: array
+    value:
+        - /etc/kubernetes/admin.conf
+        - /etc/kubernetes/scheduler.conf
+        - /etc/kubernetes/controller-manager.conf
     required: true
