--- a/inspec.yml
+++ b/inspec.yml
@@ -8,6 +8,10 @@ description: An InSpec profile verifying compliance with Kubernetes STIG version
 version: 1.0.0
 inspec_version: ">= 4.0"
 
+depends:
+  - name: inspec-k8s-node
+    git: https://gitlab.dsolab.io/scv-content/inspec/kubernetes/baselines/inspec-k8s-node.git
+
 inputs:
   - name: manifests_path
     description: 'Path to Kubernetes manifest files on the target node'
