--- a/inspec.yml
+++ b/inspec.yml
@@ -1,7 +1,8 @@
 name: k8s-node-stig-baseline
 title: Kubernetes 1.16 Based upon Kubernetes 1.16 Security Technical Implementation Guideline (STIG) Node OS Checks.
-maintainer: DISA DevSecOps Team 
-copyright: Defense Information Systems Agency (DISA)
+maintainer: MITRE SAF Team
+copyright: MITRE, 2022
+copyright_email: saf@groups.mitre.org
 license: Apache-2.0
 summary: InSpec testing for baseline compliance with the Kubernetes STIG Node OS Checks.
 description: An InSpec profile verifying compliance with Kubernetes STIG version 1.16 Node OS Checks.
