Reverted values after testing
Signed-off-by: Shivani Karikar <karikarshivani@gmail.com>

--- a/inspec.yml
+++ b/inspec.yml
@@ -59,6 +59,6 @@ inputs:
 
   - name: audit_log_retention_days
     description: 'Number of days to retain audit logs locally'
-    # type: Numeric
+    type: Numeric
     value: 30
-    # required: true
+    required: true
